# lookawry

./: LICENSE  README.md  next.config.mjs  package-lock.json  package.json  platform-detect.js
app/: configsComp.tsx  connectComp.tsx  layout.tsx  page.tsx  queryComp.tsx  useLocalStorage.tsx
components/ui/: scroll-area.tsx  spinner.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/engine/: config.rs  errors.rs  mod.rs  services.rs
src-tauri/src/engine/row_parser/: mod.rs
