[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.0", features = [ "dialog-open"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
config = "0.13"
walkdir = "2.3"
tokio-process = "0.2.5"
async-trait = "0.1.68"
tokio-postgres = "0.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "json", "chrono", "decimal"] }
regex = "1.10.6"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
bigdecimal = "0.3"
base64 = "0.21"
rust_decimal = "1.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
